# vinofyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/wine-tools/: SKILL.md
src/vinofyi/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_api.py
